--- a/pom.xml
+++ b/pom.xml
@@ -12,15 +12,20 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <postgresql.version>9.2-1004-jdbc4</postgresql.version>
-        <spring.version>4.0.0.RELEASE</spring.version>
-        <spring.security.version>3.2.0.RELEASE</spring.security.version>
+        <postgresql.version>9.4-1202-jdbc42</postgresql.version>
+        <spring.version>4.2.1.RELEASE</spring.version>
+        <spring.security.version>4.0.2.RELEASE</spring.security.version>
 
-        <spring.data.version>1.4.3.RELEASE</spring.data.version>
-        <hibernate.version>4.3.0.Final</hibernate.version>
-        <liquibase.version>3.0.8</liquibase.version>
+        <spring.data.version>1.8.2.RELEASE</spring.data.version>
+        <hibernate.version>5.0.1.RELEASE</hibernate.version>
+        <hibernate.entitymanager.version>5.0.0.Final</hibernate.entitymanager.version>
+        <hibernate.validator.version>5.0.0.Final</hibernate.validator.version>
+        <liquibase.version>3.4.1</liquibase.version>
 
-        <javax.servlet.version>3.0.1</javax.servlet.version>
+        <thymeleaf.version>2.1.4.RELEASE</thymeleaf.version>
+        <thymeleaf.extras.version>2.1.2.RELEASE</thymeleaf.extras.version>
+
+        <javax.servlet.version>3.1.0</javax.servlet.version>
     </properties>
 
     <modules>
@@ -32,7 +37,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.4</version>
+                <version>2.6</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
